{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 714,
  "lineage": "e7718dcb-4eea-e929-7b30-265ea10bcb0d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0caa91d6b7bee0ed0",
            "arn": "arn:aws:ec2:us-west-2:337380398238:instance/i-042e479de47191e79",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042e479de47191e79",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "TRS-uswest2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b4db892908fa8a9a",
            "private_dns": "ip-192-168-7-117.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.7.117",
            "public_dns": "ec2-35-93-24-134.us-west-2.compute.amazonaws.com",
            "public_ip": "35.93.24.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:337380398238:key/111066ae-1a17-433c-b14f-be6c149a531e",
                "throughput": 0,
                "volume_id": "vol-067ef6021bad3def1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04cb9eb8b8fa38fe5",
              "sg-0b505b6ea76ac7c12"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bcf81d091de37ea0",
            "tags": {
              "Name": "trs-v2----crdb-app-0",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "Name": "trs-v2----crdb-app-0",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-04cb9eb8b8fa38fe5",
              "sg-0b505b6ea76ac7c12"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.crdb",
            "aws_network_interface.haproxy",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023_x64",
            "data.aws_availability_zones.available",
            "module.security-group-01.aws_security_group.this",
            "module.security-group-01.aws_security_group.this_name_prefix",
            "module.security-group-02.aws_security_group.this",
            "module.security-group-02.aws_security_group.this_name_prefix",
            "tls_cert_request.client_csr",
            "tls_locally_signed_cert.user_cert",
            "tls_private_key.client_keys",
            "tls_private_key.crdb_ca_keys",
            "tls_self_signed_cert.crdb_ca_cert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "crdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-059327c057360300b",
            "arn": "arn:aws:ec2:us-west-2:337380398238:instance/i-047135032c9f7f7d0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-2:337380398238:key/111066ae-1a17-433c-b14f-be6c149a531e",
                "tags": {
                  "Name": "crdb-data",
                  "Role": "wal",
                  "owner": "trs-v2---",
                  "project": "trs-v2-my-project"
                },
                "throughput": 125,
                "volume_id": "vol-09547bcc0c17173e1",
                "volume_size": 25,
                "volume_type": "gp3"
              },
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdg",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-2:337380398238:key/111066ae-1a17-433c-b14f-be6c149a531e",
                "tags": {
                  "Name": "crdb-data",
                  "Role": "data",
                  "owner": "trs-v2---",
                  "project": "trs-v2-my-project"
                },
                "throughput": 125,
                "volume_id": "vol-020eaec4ca9e45b61",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-047135032c9f7f7d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.medium",
            "ipv6_address_count": 0,
            "key_name": "TRS-uswest2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-00877fbfa52ea1c4f"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00877fbfa52ea1c4f",
            "private_dns": "ip-192-168-7-111.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.7.111",
            "public_dns": "ec2-34-212-29-45.us-west-2.compute.amazonaws.com",
            "public_ip": "34.212.29.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:337380398238:key/111066ae-1a17-433c-b14f-be6c149a531e",
                "throughput": 0,
                "volume_id": "vol-08720065282ed7630",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bcf81d091de37ea0",
            "tags": {
              "Name": "trs-v2----crdb-instance-0",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "Name": "trs-v2----crdb-instance-0",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-04cb9eb8b8fa38fe5",
              "sg-0b505b6ea76ac7c12"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.haproxy",
            "aws_network_interface.crdb",
            "aws_network_interface.haproxy",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023_arm",
            "data.aws_ami.amazon_linux_2023_x64",
            "data.aws_availability_zones.available",
            "module.security-group-01.aws_security_group.this",
            "module.security-group-01.aws_security_group.this_name_prefix",
            "module.security-group-02.aws_security_group.this",
            "module.security-group-02.aws_security_group.this_name_prefix",
            "tls_private_key.crdb_ca_keys",
            "tls_self_signed_cert.crdb_ca_cert"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-059327c057360300b",
            "arn": "arn:aws:ec2:us-west-2:337380398238:instance/i-018ffc4077ec99d99",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-2:337380398238:key/111066ae-1a17-433c-b14f-be6c149a531e",
                "tags": {
                  "Name": "crdb-data",
                  "Role": "wal",
                  "owner": "trs-v2---",
                  "project": "trs-v2-my-project"
                },
                "throughput": 125,
                "volume_id": "vol-0028644747efec40d",
                "volume_size": 25,
                "volume_type": "gp3"
              },
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdg",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-2:337380398238:key/111066ae-1a17-433c-b14f-be6c149a531e",
                "tags": {
                  "Name": "crdb-data",
                  "Role": "data",
                  "owner": "trs-v2---",
                  "project": "trs-v2-my-project"
                },
                "throughput": 125,
                "volume_id": "vol-0ccb9bf0cdfaf82fa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018ffc4077ec99d99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.medium",
            "ipv6_address_count": 0,
            "key_name": "TRS-uswest2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0bccac3cc9b5a033f"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bccac3cc9b5a033f",
            "private_dns": "ip-192-168-7-151.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.7.151",
            "public_dns": "ec2-44-244-61-117.us-west-2.compute.amazonaws.com",
            "public_ip": "44.244.61.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:337380398238:key/111066ae-1a17-433c-b14f-be6c149a531e",
                "throughput": 0,
                "volume_id": "vol-01e4ac93c8a3392a1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bbfba8d7a04fd95",
            "tags": {
              "Name": "trs-v2----crdb-instance-1",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "Name": "trs-v2----crdb-instance-1",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-04cb9eb8b8fa38fe5",
              "sg-0b505b6ea76ac7c12"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.haproxy",
            "aws_network_interface.crdb",
            "aws_network_interface.haproxy",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023_arm",
            "data.aws_ami.amazon_linux_2023_x64",
            "data.aws_availability_zones.available",
            "module.security-group-01.aws_security_group.this",
            "module.security-group-01.aws_security_group.this_name_prefix",
            "module.security-group-02.aws_security_group.this",
            "module.security-group-02.aws_security_group.this_name_prefix",
            "tls_private_key.crdb_ca_keys",
            "tls_self_signed_cert.crdb_ca_cert"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-059327c057360300b",
            "arn": "arn:aws:ec2:us-west-2:337380398238:instance/i-0b15ce7117fcb4df2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-2:337380398238:key/111066ae-1a17-433c-b14f-be6c149a531e",
                "tags": {
                  "Name": "crdb-data",
                  "Role": "wal",
                  "owner": "trs-v2---",
                  "project": "trs-v2-my-project"
                },
                "throughput": 125,
                "volume_id": "vol-092ac02ce539b65c4",
                "volume_size": 25,
                "volume_type": "gp3"
              },
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdg",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-2:337380398238:key/111066ae-1a17-433c-b14f-be6c149a531e",
                "tags": {
                  "Name": "crdb-data",
                  "Role": "data",
                  "owner": "trs-v2---",
                  "project": "trs-v2-my-project"
                },
                "throughput": 125,
                "volume_id": "vol-08edf259577523ff4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b15ce7117fcb4df2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.medium",
            "ipv6_address_count": 0,
            "key_name": "TRS-uswest2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-01bf8c83069ee9535"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01bf8c83069ee9535",
            "private_dns": "ip-192-168-7-181.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.7.181",
            "public_dns": "ec2-35-90-221-227.us-west-2.compute.amazonaws.com",
            "public_ip": "35.90.221.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:337380398238:key/111066ae-1a17-433c-b14f-be6c149a531e",
                "throughput": 0,
                "volume_id": "vol-0bbfa125116b8b575",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da1a22b4a1897fa9",
            "tags": {
              "Name": "trs-v2----crdb-instance-2",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "Name": "trs-v2----crdb-instance-2",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-04cb9eb8b8fa38fe5",
              "sg-0b505b6ea76ac7c12"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.haproxy",
            "aws_network_interface.crdb",
            "aws_network_interface.haproxy",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023_arm",
            "data.aws_ami.amazon_linux_2023_x64",
            "data.aws_availability_zones.available",
            "module.security-group-01.aws_security_group.this",
            "module.security-group-01.aws_security_group.this_name_prefix",
            "module.security-group-02.aws_security_group.this",
            "module.security-group-02.aws_security_group.this_name_prefix",
            "tls_private_key.crdb_ca_keys",
            "tls_self_signed_cert.crdb_ca_cert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "haproxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0caa91d6b7bee0ed0",
            "arn": "arn:aws:ec2:us-west-2:337380398238:instance/i-058b035eccb7a40d1",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-058b035eccb7a40d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "TRS-uswest2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0c4dc6356adffbaff"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c4dc6356adffbaff",
            "private_dns": "ip-192-168-7-113.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.7.113",
            "public_dns": "ec2-34-216-75-125.us-west-2.compute.amazonaws.com",
            "public_ip": "34.216.75.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:337380398238:key/111066ae-1a17-433c-b14f-be6c149a531e",
                "throughput": 0,
                "volume_id": "vol-052d581ad1d0f5b43",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bcf81d091de37ea0",
            "tags": {
              "Name": "trs-v2----crdb-haproxy-0",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "Name": "trs-v2----crdb-haproxy-0",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-04cb9eb8b8fa38fe5",
              "sg-0b505b6ea76ac7c12"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.crdb",
            "aws_network_interface.haproxy",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023_x64",
            "data.aws_availability_zones.available",
            "module.security-group-01.aws_security_group.this",
            "module.security-group-01.aws_security_group.this_name_prefix",
            "module.security-group-02.aws_security_group.this",
            "module.security-group-02.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337380398238:internet-gateway/igw-04ec7b12ef18e8efb",
            "id": "igw-04ec7b12ef18e8efb",
            "owner_id": "337380398238",
            "tags": {
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "vpc_id": "vpc-055a393fc76985b42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "crdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337380398238:network-interface/eni-00877fbfa52ea1c4f",
            "id": "eni-00877fbfa52ea1c4f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:ea:01:cf:a2:cd",
            "owner_id": "337380398238",
            "private_dns_name": "ip-192-168-7-111.us-west-2.compute.internal",
            "private_ip": "192.168.7.111",
            "private_ip_list": [
              "192.168.7.111"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.7.111"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04cb9eb8b8fa38fe5",
              "sg-0b505b6ea76ac7c12"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bcf81d091de37ea0",
            "tags": {
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "module.security-group-01.aws_security_group.this",
            "module.security-group-01.aws_security_group.this_name_prefix",
            "module.security-group-02.aws_security_group.this",
            "module.security-group-02.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337380398238:network-interface/eni-0bccac3cc9b5a033f",
            "id": "eni-0bccac3cc9b5a033f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:61:08:ed:29:15",
            "owner_id": "337380398238",
            "private_dns_name": "ip-192-168-7-151.us-west-2.compute.internal",
            "private_ip": "192.168.7.151",
            "private_ip_list": [
              "192.168.7.151"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.7.151"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04cb9eb8b8fa38fe5",
              "sg-0b505b6ea76ac7c12"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bbfba8d7a04fd95",
            "tags": {
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "module.security-group-01.aws_security_group.this",
            "module.security-group-01.aws_security_group.this_name_prefix",
            "module.security-group-02.aws_security_group.this",
            "module.security-group-02.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337380398238:network-interface/eni-01bf8c83069ee9535",
            "id": "eni-01bf8c83069ee9535",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:00:95:57:e7:37",
            "owner_id": "337380398238",
            "private_dns_name": "ip-192-168-7-181.us-west-2.compute.internal",
            "private_ip": "192.168.7.181",
            "private_ip_list": [
              "192.168.7.181"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.7.181"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04cb9eb8b8fa38fe5",
              "sg-0b505b6ea76ac7c12"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da1a22b4a1897fa9",
            "tags": {
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "module.security-group-01.aws_security_group.this",
            "module.security-group-01.aws_security_group.this_name_prefix",
            "module.security-group-02.aws_security_group.this",
            "module.security-group-02.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "haproxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337380398238:network-interface/eni-0c4dc6356adffbaff",
            "id": "eni-0c4dc6356adffbaff",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:a6:cd:c2:ee:49",
            "owner_id": "337380398238",
            "private_dns_name": "ip-192-168-7-113.us-west-2.compute.internal",
            "private_ip": "192.168.7.113",
            "private_ip_list": [
              "192.168.7.113"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.7.113"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04cb9eb8b8fa38fe5",
              "sg-0b505b6ea76ac7c12"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bcf81d091de37ea0",
            "tags": {
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "module.security-group-01.aws_security_group.this",
            "module.security-group-01.aws_security_group.this_name_prefix",
            "module.security-group-02.aws_security_group.this",
            "module.security-group-02.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337380398238:route-table/rtb-0d703b6e79ee0fcb5",
            "id": "rtb-0d703b6e79ee0fcb5",
            "owner_id": "337380398238",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "trs-v2----trs-v2-my-project-private-rt",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "Name": "trs-v2----trs-v2-my-project-private-rt",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-055a393fc76985b42"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337380398238:route-table/rtb-01a61ce98dc2a8fa6",
            "id": "rtb-01a61ce98dc2a8fa6",
            "owner_id": "337380398238",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ec7b12ef18e8efb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "trs-v2----trs-v2-my-project-public-rt",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "Name": "trs-v2----trs-v2-my-project-public-rt",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-055a393fc76985b42"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013c0b623c78b6f54",
            "route_table_id": "rtb-0d703b6e79ee0fcb5",
            "subnet_id": "subnet-0813b8097e1c5eb38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7d5f50a15db6ee6",
            "route_table_id": "rtb-0d703b6e79ee0fcb5",
            "subnet_id": "subnet-0578c8cb541074885"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab0e25730ccdeb2a",
            "route_table_id": "rtb-0d703b6e79ee0fcb5",
            "subnet_id": "subnet-0a366a0e242c71311"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02db8d2579043e202",
            "route_table_id": "rtb-01a61ce98dc2a8fa6",
            "subnet_id": "subnet-0bcf81d091de37ea0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acde356253c66642",
            "route_table_id": "rtb-01a61ce98dc2a8fa6",
            "subnet_id": "subnet-05bbfba8d7a04fd95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0841774bbe08e6e53",
            "route_table_id": "rtb-01a61ce98dc2a8fa6",
            "subnet_id": "subnet-0da1a22b4a1897fa9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337380398238:subnet/subnet-0813b8097e1c5eb38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.7.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0813b8097e1c5eb38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337380398238",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trs-v2----trs-v2-my-project-private-sn",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "Name": "trs-v2----trs-v2-my-project-private-sn",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "vpc_id": "vpc-055a393fc76985b42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337380398238:subnet/subnet-0578c8cb541074885",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.7.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0578c8cb541074885",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337380398238",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trs-v2----trs-v2-my-project-private-sn",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "Name": "trs-v2----trs-v2-my-project-private-sn",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "vpc_id": "vpc-055a393fc76985b42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337380398238:subnet/subnet-0a366a0e242c71311",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "192.168.7.64/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a366a0e242c71311",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337380398238",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trs-v2----trs-v2-my-project-private-sn",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "Name": "trs-v2----trs-v2-my-project-private-sn",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "vpc_id": "vpc-055a393fc76985b42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337380398238:subnet/subnet-0bcf81d091de37ea0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.7.96/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcf81d091de37ea0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337380398238",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trs-v2----trs-v2-my-project-public-sn",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "Name": "trs-v2----trs-v2-my-project-public-sn",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "vpc_id": "vpc-055a393fc76985b42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337380398238:subnet/subnet-05bbfba8d7a04fd95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.7.128/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bbfba8d7a04fd95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337380398238",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trs-v2----trs-v2-my-project-public-sn",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "Name": "trs-v2----trs-v2-my-project-public-sn",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "vpc_id": "vpc-055a393fc76985b42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337380398238:subnet/subnet-0da1a22b4a1897fa9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "192.168.7.160/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da1a22b4a1897fa9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337380398238",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trs-v2----trs-v2-my-project-public-sn",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "Name": "trs-v2----trs-v2-my-project-public-sn",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "vpc_id": "vpc-055a393fc76985b42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337380398238:vpc/vpc-055a393fc76985b42",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.7.0/24",
            "default_network_acl_id": "acl-032df91c802e46482",
            "default_route_table_id": "rtb-02cf074e7a3835cf0",
            "default_security_group_id": "sg-038ff265ac795330e",
            "dhcp_options_id": "dopt-086a6028658a8be44",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-055a393fc76985b42",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02cf074e7a3835cf0",
            "owner_id": "337380398238",
            "tags": {
              "Name": "trs-v2----trs-v2-my-project-vpc",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "Name": "trs-v2----trs-v2-my-project-vpc",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group-01",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337380398238:security-group/sg-0b505b6ea76ac7c12",
            "description": "Allow desktop access (SSH, RDP, Database, HTTP) to EC2 instances",
            "egress": [],
            "id": "sg-0b505b6ea76ac7c12",
            "ingress": [],
            "name": "trs-v2----trs-v2-my-project-sg01-20251014221313605600000001",
            "name_prefix": "trs-v2----trs-v2-my-project-sg01-",
            "owner_id": "337380398238",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "trs-v2----trs-v2-my-project-sg01",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "Name": "trs-v2----trs-v2-my-project-sg01",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-055a393fc76985b42"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group-01",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1204354691",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b505b6ea76ac7c12",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.security-group-01.aws_security_group.this",
            "module.security-group-01.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-01",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "8.36.116.0/24",
              "8.39.144.0/24",
              "31.186.239.0/24",
              "163.116.128.0/17",
              "162.10.0.0/17",
              "163.116.141.21/32",
              "44.250.60.240/32"
            ],
            "description": "Allow cockroach database access from my-ip",
            "from_port": 26257,
            "id": "sgrule-3382334341",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b505b6ea76ac7c12",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 26257,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.security-group-01.aws_security_group.this",
            "module.security-group-01.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "8.36.116.0/24",
              "8.39.144.0/24",
              "31.186.239.0/24",
              "163.116.128.0/17",
              "162.10.0.0/17",
              "163.116.141.21/32",
              "44.250.60.240/32"
            ],
            "description": "Ingress Rule",
            "from_port": 22,
            "id": "sgrule-2730687032",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b505b6ea76ac7c12",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.security-group-01.aws_security_group.this",
            "module.security-group-01.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "8.36.116.0/24",
              "8.39.144.0/24",
              "31.186.239.0/24",
              "163.116.128.0/17",
              "162.10.0.0/17",
              "163.116.141.21/32",
              "44.250.60.240/32"
            ],
            "description": "Ingress Rule",
            "from_port": 8080,
            "id": "sgrule-3238920787",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b505b6ea76ac7c12",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.security-group-01.aws_security_group.this",
            "module.security-group-01.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "8.36.116.0/24",
              "8.39.144.0/24",
              "31.186.239.0/24",
              "163.116.128.0/17",
              "162.10.0.0/17",
              "163.116.141.21/32",
              "44.250.60.240/32"
            ],
            "description": "Ingress Rule",
            "from_port": 3389,
            "id": "sgrule-957746948",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b505b6ea76ac7c12",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.security-group-01.aws_security_group.this",
            "module.security-group-01.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "8.36.116.0/24",
              "8.39.144.0/24",
              "31.186.239.0/24",
              "163.116.128.0/17",
              "162.10.0.0/17",
              "163.116.141.21/32",
              "44.250.60.240/32"
            ],
            "description": "Ingress Rule",
            "from_port": 3389,
            "id": "sgrule-1191857089",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0b505b6ea76ac7c12",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.security-group-01.aws_security_group.this",
            "module.security-group-01.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-02",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337380398238:security-group/sg-04cb9eb8b8fa38fe5",
            "description": "Allow Intra-node communication",
            "egress": [],
            "id": "sg-04cb9eb8b8fa38fe5",
            "ingress": [],
            "name": "trs-v2----trs-v2-my-project-sg02-20251014221313606100000002",
            "name_prefix": "trs-v2----trs-v2-my-project-sg02-",
            "owner_id": "337380398238",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "trs-v2----trs-v2-my-project-sg02",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "tags_all": {
              "Name": "trs-v2----trs-v2-my-project-sg02",
              "owner": "trs-v2---",
              "project": "trs-v2-my-project"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-055a393fc76985b42"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group-02",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1288375645",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04cb9eb8b8fa38fe5",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.security-group-02.aws_security_group.this",
            "module.security-group-02.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-02",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-3218132676",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04cb9eb8b8fa38fe5",
            "security_group_rule_id": "sgr-01337f4d5b505e5a2",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.security-group-02.aws_security_group.this",
            "module.security-group-02.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}